# dmx-wall-mount-controller-ha

./: .pre-commit-config.yaml  .secrets.baseline  README.md  TODO.md  changes.txt  hacs.json  main.py  pyproject.toml  test_brightness_range.py  test_controller_cli.py  tmp.txt
.gemini/skills/bump-version/: SKILL.md
.github/workflows/: gatekeeper.yml  release.yml
bump-version/: SKILL.md
custom_components/dmx_diodeled/: __init__.py  config_flow.py  const.py  dmx_controller.py  light.py  manifest.json
tests/: test_framing.py  test_light_turn_on.py
