[project]
name = "dmx-wall-mount-controller-ha"
version = "0.4.0"
description = "Home Assistant custom integration for DiodeLED DMX Wi-Fi wall controllers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]
